--- a/simulator.html
+++ b/simulator.html
@@ -50,17 +50,17 @@
       <div class="team-grid">
         <div class="team-card">
           <div class="avatar">RI</div>
-          <h4>Rahat Imtiaz</h4>
+          <h4>Noor Fatima</h4>
           <p>Lead Developer & UI</p>
         </div>
         <div class="team-card">
           <div class="avatar">AB</div>
-          <h4>A. B.</h4>
+          <h4>Numaira Fatima</h4>
           <p>Research & Testing</p>
         </div>
         <div class="team-card">
           <div class="avatar">CD</div>
-          <h4>C. D.</h4>
+          <h4>Aqsa Batool</h4>
           <p>Content & Presentation</p>
         </div>
       </div>
@@ -89,3 +89,4 @@
   </footer>
 </body>
 </html>
+
